<resources>
    <string name="app_name">小D</string>
    <string name="receive_alarm_ing">有人向您求助</string>
    <string name="receive_alarm_ing_hint">按下查看键后您便可以在求助中心得到求助者的详细位置和现场声音</string>
    <string name="alarm_up_ing">求助已生效</string>
    <string name="stop">停止</string>
    <string name="look">查看</string>
    <string name="alarm_up_ing_hint">按下停止键后将中止对所有联系人的求助</string>
    <string name="dbutton_explain">了解小D</string>
    <string name="my_alarm_detail">我的警报详情</string>
    <string name="help_map">求助地图</string>
    <string name="detail">详情</string>
    <string name="menu_alarm">求助</string>
    <string name="menu_contact">联系人</string>
    <string name="menu_near_map">周边</string>
    <string name="contact_data">联系人信息</string>
    <string name="urgent_contact">紧急联系人</string>
    <string name="address_list_contact">通讯录联系人</string>
    <string name="add_contact_search_hint">输入手机号/ID查找联系人</string>
    <string name="add_phone_contact_search_hint">输入联系人姓名</string>
    <string name="add_contact_suceess">添加联系人成功</string>
    <string name="add_contact">添加联系人</string>
    <string name="add_phone_contact">添加手机联系人</string>
    <string name="set_phone_contact">设为电话联系人</string>
    <string name="menu_my">我的</string>
    <string name="person_center">个人中心</string>
    <string name="alarm_empty_hint">您没有收到任何联系人的求助！！</string>
    <string name="my_alarm_empty_hint">您没有还没有求助记录</string>
    <string name="contact_empty_hint">您没有联系人,请添加！</string>
    <string name="add_phone_hint">注意：\n系统默认添加的第一位联系人具有紧急情况下电话呼叫功能，此设置可在“紧急联系人”中重新指定"</string>
    <string name="network_connection_failed">网络连接失败</string>
    <string name="failed_to_obtain_network_information">获取网络信息失败</string>
    <string name="please_add_user_info">请添加用户信息</string>
    <string name="my_alarm_list">我的求助记录</string>
    <string name="my_dbutton">我的小D</string>
    <string name="dbutton_to_bind">小D绑定</string>
    <string name="bind_success">绑定成功</string>
    <string name="ota_update">固件升级</string>
    <string name="version_update">关于小D</string>
    <string name="update">升级</string>
    <string name="now_update">正在升级</string>
    <string name="edit_user_data">编辑个人信息</string>
    <string name="edit">编辑</string>
    <string name="contact_us">联系我们</string>
    <string name="dbutton_to_bind_search_hint_title">搜索中…</string>
    <string name="dbutton_to_bind_search_hint_text">请将需要配对的小D靠近手机，以便找到它……</string>
    <string name="dbutton_to_bind_search_over_hint_title">搜索已完成</string>
    <string name="dbutton_to_bind_search_over_hint_text">如有多个小D，请照小D的ID号确认绑定</string>
    <string name="dbutton_empty_hint">如您还没有“小D”，可以选择购买</string>
    <string name="delete_hint">删除后不可返回，必须再次通过增加联系人再可恢复</string>
    <string name="abondon">放弃</string>
    <string name="delete">删除</string>
    <string name="choice_all">全选</string>
    <string name="cancel_choice_all">取消全选</string>
    <string name="user_login">用户登录</string>
    <string name="register_hint_protect">注册须知</string>
    <string name="new_user">注册账户</string>
    <string name="please_phone_number_login">请使用手机号码登录</string>
    <string name="phone_number">请输入手机号</string>
    <string name="sms_code">短信验证码</string>
    <string name="get_sms_code">获取验证码</string>
    <string name="login_hint">本APP需要"小D"的支持才可正常工作，点击"了解详情"</string>
    <string name="learn_detail">了解详情</string>
    <string name="learn_dbutton">了解小D</string>
    <string name="login">登录</string>
    <string name="logout_account">退出登录</string>
    <string name="choose_voice">选择录音</string>
    <string name="new_user_register">注册新用户</string>
    <string name="go_next">下一步</string>
    <string name="go_up">上一步</string>
    <string name="common_accpet">同意</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_new_voice">最新一段</string>
    <string name="register_hint">请慎重使用注册的电话号码，注册成功后号码将不可以修改</string>
    <string name="register_success">注册成功</string>
    <string name="user_data_input_hint">用户信息关键填写</string>
    <string name="register_sucess_hint">恭喜你已成功注册</string>
    <string name="please_input_your_name">昵称</string>
    <string name="please_input_your_head">用户头像</string>
    <string name="please_choies_your_sex">性别</string>
    <string name="please_input_your_date_of_birth">出生日期</string>
    <string name="please_input_your_blood_group">血型</string>
    <string name="please_input_your_name_hint">请输入您的姓名</string>
    <string name="please_input_your_head_hint">请设置您的头像</string>
    <string name="please_choies_your_sex_hint">请选择您的性别</string>
    <string name="please_input_your_date_of_birth_hint">请输入出生日期</string>
    <string name="please_input_your_blood_group_hint">请输入您的血型</string>
    <string name="need_contact">需要联系人</string>
    <string name="need_contact_hint">我的小D需要联系人信息，\n以便在需要时求助TA们！！</string>
    <string name="go_add">去添加</string>
    <string name="please_bind_your_dbutton">如您手上有小D请绑定</string>
    <string name="please_bind_your_dbutton_hint">(也可以完成注册后去个人中心绑定）</string>
    <string name="register_over">注册</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="blood_other">未知</string>
    <string name="edit_over">完成修改</string>
    <string name="over">完成</string>
    <string name="bind_over">完成绑定</string>
    <string name="bind_over_hint">您已完成小D的绑定，可以使用了！！</string>
    <string name="repeat_connect">重试</string>
    <string name="no_photo">获取图片失败，请重新选取图片</string>
    <string name="upload_photo_success">文件上传成功</string>
    <string name="upload_photo_false">文件上传失败，请重新上传</string>
    <string name="please_open_permission">请打开权限</string>
    <string name="please_open_ble_permission">请打开蓝牙</string>
    <string name="common_ptake_photo">"拍照"</string>
    <string name="common_palbum">"相册"</string>
    <string name="short_voice">录音时间过短</string>
    <string name="user_data_id">用户ID：</string>
    <string name="user_data_sex">性别：</string>
    <string name="user_data_age">年龄：</string>
    <string name="user_data_blood">血型：</string>
    <string name="user_data_phone_number">手机：</string>
    <string name="user_data_dbutton_id">小D ID：</string>
    <string name="dbutton_detail">小D详情</string>
    <string name="dbutton_electricity">小D电量</string>
    <string name="dbutton_unbind">解除绑定</string>
    <string name="dbutton_unbind_hint">您的小D已完成绑定，可以正常使用。如您丢失了小D或需要重新进行配置请先“解除绑定</string>
    <string name="dbutton_no_bind">没有小D</string>
    <string name="dbutton_no_bind_hint">您需要一个小D，如果没有小D就没有办法向他人寻求帮助，在危急时刻小D是您的忠实守护神，所以请认领一个小D吧！</string>
    <string name="dbutton_has_bind_hint">如您手上已有小D请点进行绑定，以便可以正常使用</string>
    <string name="dbutton_buy">认领小D</string>
    <string name="dbutton_bind">进行绑定</string>
    <string name="bind">绑定</string>
    <string name="no_connection">未连接</string>
    <string name="connection_ing">连接中</string>
    <string name="dbutton_no_connect_hint">您的小D已完成绑定，但连接丢失。如您丢失了小D或需要重新进行配置请先“解除绑定”，否则可以尝试“手动连接”</string>
    <string name="go_to_connect">手动连接</string>
    <string name="dbutton_explain_button">小D说明</string>
    <string name="register_over_hint">如您已购买了小D可以点“绑定小D”完成操作了</string>
    <string name="register_over_bind">绑定小D</string>
    <string name="buy_dbutton">购买小D</string>
    <string name="register_over_login">进入登录页</string>
    <string name="set_main_phone_contact">注意：\n系统默认添加的第一位联系人具有电话呼叫求助功能，此设置可在“联系人”中重新指定。</string>
    <string name="dbutton_explain_hint">学会了</string>
    <string name="call_phone">拨打号码</string>
    <string name="send_sms">发送短信</string>
    <string name="play_recording">播放录音</string>
    <string name="start_recording">开始录音</string>
    <string name="stop_recording">停止录音</string>
    <string name="now_location">获取当前定位</string>
    <string name="call_phone_ring">手机响铃</string>
    <string name="location_locus">定位轨迹</string>
    <string name="speech_assistant">语音助手</string>
    <string name="please_input_phone_number_login">请输入手机号码登录</string>
    <string name="only_support_china_phone_number">仅支持国内手机号</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="please_input_sms_text">请输入短信内容</string>
    <string name="please_input_name_hint">设置昵称可以让联系人更容易识别您</string>
    <string name="click">单击</string>
    <string name="double_click">双击</string>
    <string name="long_press">长按</string>
    <string name="save_phone">保存号码</string>
    <string name="answe_phone">接听电话</string>
    <string name="ring_off_phone">挂断电话</string>
    <string name="start_search_phone">开始寻找手机</string>
    <string name="stop_search_phone">停止寻找手机</string>
    <string name="setting_activity">设置界面</string>
    <string name="execute_activity">执行界面</string>
    <string name="text_query">查询：</string>
    <string name="voice_msg">发音信息：</string>
    <string name="base_mean">基本释义：</string>
    <string name="related_examples">相关例句：</string>
    <string name="text_null">Hello World</string>
    <string name="text_test">1 1 1\n2 2 2\n3 3 3\n4 4 4\n5 5 5\n6 6 6\n7 7 7\n8 8 8\n9 9 9\n10 10 10\n11 11 11\n12 12 12\n13 13 13\n14 14 14\n15 15 15\n16 16 16\n17 17 17\n18 18 18\n19 19 19\n20 20 20\n21 21 21\n</string>
    <string name="translate_action_add">加入单词本</string>
    <string name="translate_bar_name">翻译</string>
    <string name="translate_et_hint">请输入翻译内容</string>
    <string name="translate_btn_text">翻    译</string>
    <string name="app_id">5b854e31</string>
    <string name="example_explain">本示例为讯飞语音Android平台开发者提供语音听写、语法识别、语义理解和语音合成等代码样例，旨在让用户能够依据该示例快速开发出基于语音接口的应用程序。</string>
    <string name="text_tts_source">科大讯飞作为中国最大的智能语音技术提供商，在智能语音技术领域有着长期的研究积累，并在中文语音合成、语音识别、口语评测等多项技术上拥有国际领先的成果。科大讯飞是我国唯一以语音技术为产业化方向的“国家863计划成果产业化基地”…</string>
    <string name="text_tts_source_en">iFLYTEK is a national key software enterprise dedicated to the research of intelligent speech and language technologies, development of software and chip products, provision of speech information services, and integration of E-government systems. The intelligent speech technology of iFLYTEK, the core technology of the company, represents the top level in the world.</string>
    <string name="text_isr_abnf_hint">\t上传内容为：\n\t#ABNF 1.0 gb2312;\n\tlanguage zh-CN;\n\tmode voice;\n\troot $main;\n\t$main = $place1 到$place2 ;\n\t$place1 = 北京 | 武汉 | 南京 | 天津 | 东京;\n\t$place2 = 上海 | 合肥;</string>
    <string name="text_understand_hint">\t您可以说：\n\t今天的天气怎么样?\n\t北京到上海的火车?\n\t来首歌吧?\n\n\t更多语义请登录：\n\thttp://aiui.xfyun.cn/ \n\t配置您的专属语义吧!</string>
    <string name="text_begin">请开始说话…</string>
    <string name="text_begin_recognizer">开始音频流识别</string>
    <string name="text_begin_ise">开始音频流评测</string>
    <string name="text_upload_contacts">上传联系人</string>
    <string name="text_upload_userwords">上传用户词表</string>
    <string name="text_upload_success">上传成功</string>
    <string name="text_userword_empty">词表下载失败或内容为空</string>
    <string name="text_download_success">下载成功</string>
    <string name="pref_key_iat_show">iat_show</string>
    <string name="pref_title_iat_show">显示听写界面</string>
    <string name="text_show_contacts">上传联系人/词表显示</string>
    <string name="text_show_iat_result">听写结果显示</string>
    <string name="pref_key_translate">translate</string>
    <string name="pref_title_translate">翻译</string>
    <string name="face_model_delete">人脸模型删除</string>
    <string name="title_face_idf">人脸1:N检索示例</string>
    <string name="title_vocal_idf">声纹1:N检索示例</string>
    <string-array name="engine_entries">
        <item>本地合成</item>
        <item>在线合成</item>
    </string-array>
    <string-array name="engine_values">
        <item>local</item>
        <item>cloud</item>
    </string-array>
    <string name="register_protect">您的个人数据理应在设备端就一直受到严密保护，
除非有您允许，否则绝不能被分享出去。因此，我
们在自己的产品中内置了加密技术、设备端的智能
技术以及其他各类工具，让您以自己的方式，分享
您愿意分享的内容。在提升用户体验的同时，保护
您共享给我们的信息。只有当您的数据与大量其他
用户的数据相结合，平均掉随机添加的信息时，相
关的模式才会显现。而这些模式，能够帮助我们深
入了解用户如何使用他们的小D，同时避免收集与
个人相关的信息。\n\n

我们需要您在注册使用时填写个人相关信息，这部
分内容我们会妥善保管，我们承诺这些信息只用于
服务用户所需要范畴</string>
</resources>