<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_call_phone"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/call_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/call_phone"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_send_sms"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/send_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/send_sms"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_play_recording"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/play_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/play_recording"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_start_recording"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/start_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/start_recording"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_stop_recording"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/stop_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/stop_recording"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_now_location"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/now_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/now_location"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_call_phone_ring"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/call_phone_ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/call_phone_ring"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_location_locus"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/location_locus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/location_locus"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_speech_assistant"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/speech_assistant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/speech_assistant"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </RelativeLayout>
</LinearLayout>