<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/receive_alarm_ing"
            android:textColor="@color/white"
            android:textSize="31sp" />

        <Button
            android:id="@+id/dialog_receive_alarm"
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:text="@string/look"
            android:background="@mipmap/alarm_cancel" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:text="@string/receive_alarm_ing_hint"
            android:textColor="@color/white"
            android:layout_marginBottom="180dp"
            android:textSize="17sp" />
    </LinearLayout>
</LinearLayout>