<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.sfr.dbuttonapplication.activity.login.RegisterActivity">

    <include
        android:id="@+id/title"
        layout="@layout/title_view_extra" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="34dp"
        android:textSize="14sp"
        android:textColor="@color/user_data_text"
        android:layout_marginRight="34dp"
        android:text="@string/register_protect" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_common_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dp"
            android:text="@string/common_cancel"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_common_accpet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dp"
            android:text="@string/common_accpet"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </RelativeLayout>

</RelativeLayout>

