<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.sfr.dbuttonapplication.activity.BindDButtonActivity">

    <include
        android:id="@+id/title"
        layout="@layout/title_view_extra" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white">
        <TextView
            android:id="@+id/tv_bind_search_over_hint_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/dbutton_to_bind_search_over_hint_title"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_bind_search_over_hint_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/dbutton_to_bind_search_over_hint_text"
            android:textColor="@color/black"
            android:textSize="14dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="6dp"
                android:text="@string/user_data_dbutton_id"
                android:textColor="@color/user_data_text"
                android:textSize="12dp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ListView
                android:id="@+id/lv_bind_dbutton_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
            <TextView
                android:id="@+id/tv_empty_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dbutton_empty_hint"
                android:visibility="gone"
                android:textSize="@dimen/title_size" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
