<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.sfr.dbuttonapplication.activity.alarm.MyAlarmListActivity">

    <include
        android:id="@+id/title"
        layout="@layout/title_view_extra" />

    <LinearLayout
        android:id="@+id/ll_edit_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btn_choice_all"
            android:layout_width="160dp"
            android:layout_height="36dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/choice_all"
            android:background="@drawable/edit_data_btn_selector" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="160dp"
            android:layout_height="36dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:text="@string/delete"
            android:background="@drawable/edit_data_btn_selector" />
    </LinearLayout>
    <ListView
        android:id="@+id/lv_alarm"
        android:layout_below="@id/title"
        android:layout_width="match_parent"
        android:layout_above="@id/ll_edit_bottom"
        android:layout_marginTop="2dp"
        android:layout_height="match_parent">

    </ListView>

    <TextView
        android:id="@+id/tv_alarm_empty_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/alarm_empty_hint"
        android:textSize="@dimen/title_size" />
</RelativeLayout>
